# jnl

./: .gitignore  .travis.yml  CMakeLists.txt  MANIFEST  README.md  aliases.zshrc  clean-testdb.sh  package-lock.json  package.json  requirements.txt  setup.py  setup.sh  todo.md  todo.txt
.github/: CONTRIBUTING.md
Today's Worklog.app-remove-suffix-to-enable/Contents/Resources/Scripts/: main.scpt
jnl/: __init__.py  all.py  cli.py  database.py  db.py  entries.py  jnl.py  listeners.py  search.py  system.py  tag.py
lib/: jnl.pm
misc/: dxx-convert.sh
misc/Today's Worklog.app-remove-suffix-to-enable.app.app-remove-suffix-to-enable/Contents/Resources/Scripts/: main.scpt
misc/Today's Worklog.app-remove-suffix-to-enable/Contents/: Info.plist
misc/Today's Worklog.app-remove-suffix-to-enable/Contents/Resources/: applet.rsrc
misc/Today's Worklog.app-remove-suffix-to-enable/Contents/Resources/Scripts/: main.scpt
src/: Model.ts
src/main/: curses.cpp  jnl.cpp
tests/: pyjnl_test.py  test_jnl.py
tests/fixtures/typical/worklogs/: HMKYKM4NNG4KREW61D55.txt  W5BNE202WYF031H7J3RY.txt
